--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gather-site",
-  "version": "0.1.3",
+  "version": "0.2.1",
   "description": "个人垂直采集器",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,9 @@
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
     "gulp-load-plugins": "^1.2.0",
+    "istanbul": "^0.4.2",
     "jshint": "^2.9.1",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.1.0",
+    "mocha": "^2.4.5"
   }
 }
